@@ -1,0 +1,7 @@
+#import <Foundation/Foundation.h>
+
+// Local includes
+#import "PBXNativeTarget.h"
+
+@interface PBXBundleTarget : PBXNativeTarget
+@end
