@@ -1,0 +1,5 @@
+#import "PBXCommon.h"
+#import "PBXBundleTarget.h"
+
+@implementation PBXBundleTarget
+@end
