@@ -1,0 +1,5 @@
+#import "PBXCommon.h"
+#import "PBXFrameworkTarget.h"
+
+@implementation PBXFrameworkTarget
+@end
